--- a/docs/css/hospital-rooms.css
+++ b/docs/css/hospital-rooms.css
@@ -23,8 +23,9 @@
   padding-left: 2%;
   padding-right: 2%;
   overflow:hidden;
-  width: 80%;
+  width: 75%;
 }
+
 
 .feature-text p {
   font-size: 1em;
@@ -32,6 +33,20 @@
 
 .feature-text h2 {
   font-size: 2em;
+}
+
+
+@media only screen and (max-width: 960px) {
+  .feature-text h2 {
+    font-size: 12px;
+  }
+  .feature-text {
+    bottom: 0;
+    padding: 0;
+  }
+  .feature-text p {
+    font-size: 8px;
+  }
 }
 
 .image-tim-niamh {
