--- a/docs/css/start.css
+++ b/docs/css/start.css
@@ -1,1 +1,361 @@
+body {
+  background-color: black;
+  font: normal 17px/1.9em "Inter", "Source Sans Pro","Helvetica Neue", Arial, sans-serif;
+  text-align: center;
+}
+
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
+.about-link {
+  color: #fff;
+  float: right;
+  text-align: center;
+  padding: 20px 25px;
+  text-decoration: underline;
+  font-size: 1em;
+}
+
+.about-link a {
+  color: #fff;
+}
+
+.intro {
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+
+.project-title {
+  font-weight: 900;
+  font-size: 3.5em;
+  color: #fff;
+  display: block;
+  margin-block-start: 0.27em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0.5em;
+  left: 0;
+  margin: auto;
+  height: 1em;
+}
+
+h1 {
+  font-weight: normal;
+  letter-spacing: 1px;
+  font: 70px "Lato", sans-serif;
+  color: #111;
+  padding: 2%;
+}
+
+p {
+  color: #fff;
+}
+
+#appearing-scroll {
+  display: none;
+  color: white;
+  width: 8em;
+  position: absolute;
+  bottom: 5%;
+  padding-bottom: 40px;
+  text-align: center;
+  border-radius: 10px;
+  margin-left: 45%;
+  margin-right: 45%;
+}
+
+.chevron {
+  margin-top: 2%;
+  display: block;
+  -webkit-animation: pulse 2s infinite;
+  animation: pulse 2s infinite;
+  color: white;
+}
+
+.chevron.bottom:before {
+    top: 0;
+    -webkit-transform: rotate(135deg);
+    -ms-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+
+.chevron::before {
+    border-style: solid;
+    border-width: 0.25em 0.25em 0 0;
+    content: '';
+    display: inline-block;
+    height: 20px;
+    position: relative;
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    vertical-align: top;
+    width: 20px;
+}
+
+.blog-card {
+	display: flex;
+	flex-direction: column;
+	margin: 1rem auto;
+	box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+	margin-bottom: 1.6%;
+	background: #fff;
+	line-height: 1.4;
+	font-family: sans-serif;
+	border-radius: 1px;
+	overflow: hidden;
+	z-index: 0;
+}
+
+.blog-card a {
+	color: inherit;
+}
+
+.blog-card a:hover {
+	color: #5ad67d;
+}
+
+.blog-card:hover .photo {
+	transform: scale(1.2) rotate(0deg);
+}
+
+.blog-card .meta {
+	position: relative;
+	z-index: 0;
+	height: 200px;
+}
+
+.blog-card .photo {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-size: cover;
+	background-position: center;
+	transition: transform .2s;
+}
+
+.blog-card .details,
+  .blog-card .details ul {
+	margin: auto;
+	padding: 0;
+	list-style: none;
+}
+
+.blog-card .details {
+	top: 0;
+	bottom: 0;
+	left: -100%;
+	margin: auto;
+	transition: left .2s;
+	background: rgba(0, 0, 0, 0.6);
+	color: #fff;
+	padding: 10px;
+	width: 100%;
+	font-size: .9rem;
+}
+
+.blog-card .details a {
+	text-decoration: dotted underline;
+}
+
+.blog-card .details ul li {
+	display: inline-block;
+}
+
+.blog-card .details .author:before {
+	font-family: FontAwesome;
+	margin-right: 10px;
+	content: "\f007";
+}
+
+.blog-card .details .date:before {
+	font-family: FontAwesome;
+	margin-right: 10px;
+	content: "\f133";
+}
+
+.blog-card .details .tags ul:before {
+	font-family: FontAwesome;
+	content: "\f02b";
+	margin-right: 10px;
+}
+
+.blog-card .details .tags li {
+	margin-right: 2px;
+}
+
+.blog-card .details .tags li:first-child {
+	margin-left: -4px;
+}
+
+.blog-card .description {
+	padding: 1rem;
+	background: #fff;
+	position: relative;
+	z-index: 1;
+}
+
+.blog-card .description h1,
+    .blog-card .description h2 {
+	font-family: Poppins, sans-serif;
+}
+
+.blog-card .description h1 {
+	line-height: 1;
+	margin: 0;
+	font-size: 1.7rem;
+}
+
+.blog-card .description h2 {
+	font-size: 1rem;
+	font-weight: 300;
+	/* text-transform: uppercase; */
+	color: #a2a2a2;
+	margin-top: 5px;
+}
+
+.blog-card .description .read-more {
+	text-align: right;
+}
+
+.blog-card .description .read-more a {
+	color: #bde0fe;
+	display: inline-block;
+	position: relative;
+}
+
+.blog-card .description .read-more a:after {
+	content: "\f061";
+	font-family: FontAwesome;
+	margin-left: -10px;
+	opacity: 0;
+	vertical-align: middle;
+	transition: margin .3s, opacity .3s;
+}
+
+.blog-card .description .read-more a:hover:after {
+	margin-left: 5px;
+	opacity: 1;
+}
+
+.blog-card p {
+	position: relative;
+	margin: 1rem 0 0;
+  color: black;
+}
+
+.blog-card p:first-of-type {
+	margin-top: 1.25rem;
+}
+
+.blog-card p:first-of-type:before {
+	content: "";
+	position: absolute;
+	height: 5px;
+	background: #bde0fe;
+	width: 35px;
+	top: -0.75rem;
+	border-radius: 3px;
+}
+
+.blog-card:hover .details {
+	left: 0%;
+}
+
+@media (min-width: 640px) {
+	.blog-card {
+		flex-direction: row;
+		max-width: 700px;
+	}
+
+	.blog-card .meta {
+		flex-basis: 40%;
+		height: auto;
+	}
+
+	.blog-card .description {
+		flex-basis: 60%;
+	}
+
+  .blog-card .description:before {
+		transform: skewX(-3deg);
+		content: "";
+		background: #fff;
+		width: 30px;
+		position: absolute;
+		left: -10px;
+		top: 0;
+		bottom: 0;
+		z-index: -1;
+	}
+
+	.blog-card.alt {
+		flex-direction: row-reverse;
+	}
+
+	.blog-card.alt .description:before {
+		left: inherit;
+		right: -10px;
+		transform: skew(3deg);
+	}
+
+	.blog-card.alt .details {
+		padding-left: 25px;
+	}
+}
+
+hr.solid {
+  border-top: 3px solid #bde0fe;
+  width:20%;
+  margin-top: 10%;
+  margin-bottom: 1%;
+}
+
+/* Footer */
+.footer {
+  /* padding: 20%; */
+  text-align: center;
+  /* margin-top: 20%; */
+}
+
+.get-in-touch {
+  padding: 60px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+}
+
+.get-in-touch a {
+  text-decoration: none;
+  color:white;
+}
+
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+
+.ft14 {
+font-size: 44px !important;
+  color:red;
+}
+
+@media print {
+  .header {
+    position: static;
+  }
+
+ @media print {
+  a[href^="http"]:not([href*="mywebsite.com"])::after {
+    content: " (" attr(href) ")";
+  }
+}
 
