--- a/docs/css/detained-informal.css
+++ b/docs/css/detained-informal.css
@@ -12,23 +12,25 @@
   position: relative;
   margin-left: 15%;
   margin-right: 15%;
-  width: 80%;
+  width: 75%;
+  position:relative;
 }
 
 .feature-text {
   position: absolute;
   text-align: center;
-  bottom: 5%;
-  color: black;
+  bottom: 4%;
+  color: white;
   padding-left: 2%;
   padding-right: 2%;
   overflow:hidden;
-  width: 75%;
+  width: 80%;
 }
 
 
 .feature-text p {
   font-size: 1em;
+  line-height: 1.2;
 }
 
 .feature-text h2 {
