--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -3,6 +3,13 @@ body {
   /*text-align: center;*/
 }
 
+@media only screen and (max-width: 960px) {
+  body {
+    /**font: normal 12px/1.9em "Inter", "Source Sans Pro","Helvetica Neue", Arial, sans-serif;**/
+    font: 400 15px/1.8 "Lato", sans-serif;
+  }
+}
+
 .nav a {
   float: right;
   color: black;
@@ -32,6 +39,12 @@ header {
   text-align: center;
   font-size: 1.1em;
   font-family:monospace;
+}
+
+@media only screen and (max-width: 960px) {
+  header {
+    visibility: hidden;
+  }
 }
 
 #mc-embedded-subscribe {
