--- a/docs/css/detained-informal.css
+++ b/docs/css/detained-informal.css
@@ -8,6 +8,42 @@
   color: black;
 }
 
+.heading {
+  max-width: 930px;
+  padding: 0 15px 50px;
+  margin: 60px auto 0;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .heading {
+    margin: 10px auto 0;
+  }
+}
+
+.teaser {
+  max-width: 730px;
+  padding: 15px;
+  margin: 0 auto;
+  font-weight: 400;
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  font-size: 1.1rem;
+  color: #111;
+}
+
+.byline {
+  color: #a5a5a5;
+  font-weight: 400;
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+}
+
+@media screen and (max-width: 767px) {
+  .mainhead {
+    font-size: 28px;
+    font-size: 1.75rem;
+  }
+}
+
 .feature {
   position: relative;
   margin-left: 15%;
@@ -39,18 +75,22 @@
 
 
 @media only screen and (max-width: 960px) {
-  .feature-text h2 {
-    font-size: 12px;
+  .heading h1 {
+    font-size: 17px;
     padding: 0;
   }
-  .feature-text {
-    bottom: 0;
-    padding: 0;
+  .teaser p {
+    font-size: 15px;
   }
-  .feature-text p {
-    font-size: 8px;
-    padding: 0;
-  }
+}
+
+h1 {
+    letter-spacing: 3px;
+    /* text-transform: uppercase; */
+    font: 70px "Lato", sans-serif;
+    color: #111;
+    padding: 2%;
+    margin: 0 auto;
 }
 
 .image-helen-rees {
@@ -86,4 +126,27 @@ hr.solid {
   width:80%;
   height: auto;
   margin: 0 auto;
+}
+
+@media only screen and (max-width: 400px) {
+  .content {
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 14px;
+  }
+  .flourish-embed {
+  position:relative;
+  width:100%;
+  height: auto;
+  margin: 0 auto;
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  .content {
+    margin-left:3%;
+    margin-right:3%;
+    font-size: 14px;
+  }
 }
