--- a/docs/css/hospital-leave.css
+++ b/docs/css/hospital-leave.css
@@ -8,6 +8,35 @@
   color: black;
 }
 
+.heading {
+  max-width: 930px;
+  padding: 0 15px 50px;
+  margin: 60px auto 0;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .heading {
+    margin: 10px auto 0;
+  }
+}
+
+.teaser {
+  max-width: 730px;
+  padding: 15px;
+  margin: 0 auto;
+  font-weight: 400;
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  font-size: 1.1rem;
+  color: #111;
+}
+
+.byline {
+  color: #a5a5a5;
+  font-weight: 400;
+  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+}
+
 .feature {
   position: relative;
   margin-left: 15%;
@@ -18,7 +47,7 @@
 .feature-text {
   position: absolute;
   text-align: center;
-  bottom: 5%;
+  bottom: 3%;
   color: white;
   padding-left: 2%;
   padding-right: 2%;
@@ -31,13 +60,12 @@
   font-size: 1em;
 }
 
-.feature-text h2 {
-  font-size: 2em;
+.feature-text h1 {
+  font-size: 2.4em;
 }
 
-
 @media only screen and (max-width: 960px) {
-  .feature-text h2 {
+  .feature-text h1 {
     font-size: 12px;
     padding: 0;
   }
@@ -45,10 +73,16 @@
     bottom: 0;
     padding: 0;
   }
-  .feature-text p {
-    font-size: 8px;
-    padding: 0;
-  }
+}
+
+h1 {
+    letter-spacing: 3px;
+    /* text-transform: uppercase; */
+    /**font: 40px "Lato", sans-serif;**/
+    color: white;/**#111;**/
+    padding: 2%;
+    line-height: 1;
+    margin: 0 auto;
 }
 
 .image-adrian-elsworth {
@@ -97,10 +131,24 @@ hr.solid {
   border-radius: 0.3125rem 0.1875rem 0.1875rem 0.3125rem;
 }
 
+@media only screen and (max-width: 600px) {
+  .content {
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 14px;
+  }
+  .flourish-embed {
+  position:relative;
+  width:100%;
+  height: auto;
+  margin: 0 auto;
+  }
+}
+
 /* Visualisations */
 .flourish-embed {
   position:relative;
-  width:80%;
+  width:90%;
   height: auto;
   margin: 0 auto;
 }
