--- a/docs/css/hospital-leave.css
+++ b/docs/css/hospital-leave.css
@@ -37,31 +37,49 @@
   font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
 }
 
+@media screen and (max-width: 767px) {
+  .mainhead {
+    font-size: 28px;
+    font-size: 1.75rem;
+  }
+}
+
 .feature {
   position: relative;
   margin-left: 15%;
   margin-right: 15%;
-  width: 80%;
+  width: 75%;
+  position:relative;
 }
 
 .feature-text {
   position: absolute;
   text-align: center;
-  bottom: 3%;
+  bottom: 4%;
   color: white;
   padding-left: 2%;
   padding-right: 2%;
   overflow:hidden;
-  width: 75%;
+  width: 80%;
 }
-
 
 .feature-text p {
   font-size: 1em;
+  line-height: 1.2;
 }
 
-.feature-text h1 {
-  font-size: 2.4em;
+.feature-text h2 {
+  font-size: 2em;
+}
+
+@media only screen and (max-width: 960px) {
+  .heading h1 {
+    font-size: 17px;
+    padding: 0;
+  }
+  .teaser p {
+    font-size: 15px;
+  }
 }
 
 @media only screen and (max-width: 960px) {
@@ -78,10 +96,9 @@
 h1 {
     letter-spacing: 3px;
     /* text-transform: uppercase; */
-    /**font: 40px "Lato", sans-serif;**/
-    color: white;/**#111;**/
+    font: 50px "Lato", sans-serif;
+    color: #111;
     padding: 2%;
-    line-height: 1;
     margin: 0 auto;
 }
 
